# eselsohr

./: .dockerignore  .editorconfig  .gitignore  .hlint.yaml  CHANGELOG.md  Dockerfile  README.md  brittany.yaml  cabal.project  cabal.project.freeze  eselsohr.cabal  flake.nix  fourmolu.yaml  hie.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  code-scanning.yml  freebsd.yml  hadolint.yml  scorecards.yml
app/: Main.hs
contrib/freebsd/rc.d/: eselsohr
contrib/systemd/: eselsohr.service
eselsohr/: .editorconfig  Dockerfile  LICENSE  README.md  cabal.project  default.nix  eselsohr.cabal  flake.nix  shell.nix
eselsohr/app/: Main.hs
eselsohr/src/: Lib.hs
eselsohr/src/Lib/: Config.hs  Init.hs  Persistence.hs  Web.hs
eselsohr/src/Lib/App/: Env.hs  Error.hs  Log.hs  Monad.hs
eselsohr/src/Lib/Core/: Action.hs  Domain.hs  Flow.hs  Service.hs
eselsohr/src/Lib/Core/Action/: Command.hs  Query.hs
eselsohr/src/Lib/Core/Domain/: Accesstoken.hs  Action.hs  Article.hs  Capability.hs  Context.hs  Entity.hs  ExpirationDate.hs  Frontend.hs  Id.hs  Resource.hs  StoreEvent.hs  Uri.hs
eselsohr/src/Lib/Core/Effect/: Random.hs  Repository.hs  Scraper.hs  Time.hs
eselsohr/src/Lib/Core/Flow/: Command.hs  Query.hs
eselsohr/src/Lib/Core/Service/: Article.hs  Collection.hs  SharedReference.hs  UnlockLink.hs  Util.hs
eselsohr/src/Lib/Impl/: Random.hs  Repository.hs  Scraper.hs  Time.hs
eselsohr/src/Lib/Impl/Repository/: File.hs
eselsohr/src/Lib/Web/: Controller.hs  Route.hs  Types.hs
eselsohr/src/Lib/Web/Controller/: Article.hs  Collection.hs  Command.hs  Common.hs  Frontend.hs  Query.hs  SharedReference.hs  UnlockLink.hs  Util.hs
eselsohr/src/Lib/Web/Route/: Article.hs  Collection.hs  Command.hs  Common.hs  Frontend.hs  Query.hs  Util.hs
eselsohr/src/Lib/Web/View/: App.hs  Form.hs  Page.hs  Style.hs
eselsohr/src/Net/IPv6/: Helper.hs
eselsohr/src/Network/Wai/Middleware/: AddHsts.hs  MyMethodOverride.hs  NoOp.hs
eselsohr/src/Servant/CSS/: Clay.hs
eselsohr/test/: Spec.hs
eselsohr/test/Test/: Assert.hs  Common.hs  Static.hs
eselsohr/test/Test/Core/Domain/: Accesstoken.hs
src/: Capability.hs  Cli.hs  Config.hs  Controller.hs  Db.hs  Init.hs  Lib.hs  Migration.hs  Model.hs  Routes.hs  Scraper.hs  Service.hs  View.hs
src/Db/: Article.hs  CollectionMapping.hs
src/Db/Internal/: Article.hs
src/Lib/: App.hs  Config.hs  Init.hs  Persistence.hs  Web.hs
src/Lib/App/: Command.hs  Env.hs  Error.hs  Log.hs  Monad.hs  Port.hs
src/Lib/Core/: Accesstoken.hs  Article.hs  Capability.hs  Collection.hs  Effect.hs  Email.hs  Flow.hs  Id.hs  Service.hs  Uri.hs  UserAction.hs  Uuid.hs
src/Lib/Core/Action/: Command.hs  Query.hs
src/Lib/Core/Domain/: Accesstoken.hs  Article.hs  Capability.hs  Entity.hs  ExpirationDate.hs  Frontend.hs  Id.hs  Resource.hs  Uri.hs
src/Lib/Core/Effect/: Random.hs  Repository.hs  Scraper.hs  Time.hs
src/Lib/Core/Flow/: Command.hs  Query.hs
src/Lib/Core/Service/: Article.hs  Collection.hs  SharedReference.hs  UnlockLink.hs  Util.hs
src/Lib/Db/: Wrapper.hs
src/Lib/Domain/: Article.hs  ArticleList.hs  Authorization.hs  Capability.hs  CapabilityList.hs  Collection.hs  Error.hs  Id.hs  NonEmptyText.hs  Repo.hs  Uri.hs
src/Lib/Domain/Repo/: ArticleList.hs  CapabilityList.hs  Collection.hs
src/Lib/Effect/: Log.hs  Random.hs  Resource.hs  Scraper.hs  Time.hs
src/Lib/Effect/Resource/: Accesstoken.hs  Article.hs  Collection.hs
src/Lib/Impl/: Random.hs  Repository.hs  Scraper.hs
src/Lib/Impl/Repository/: File.hs
src/Lib/Infra/: Error.hs  Log.hs  Monad.hs
src/Lib/Infra/Adapter/: Random.hs  Scraper.hs  Time.hs
src/Lib/Infra/Persistence/: Cleanup.hs  File.hs  Queue.hs  Server.hs
src/Lib/Infra/Persistence/Model/: Article.hs  ArticleList.hs  Capability.hs  CapabilityList.hs  Collection.hs  Id.hs  Shared.hs  Uri.hs
src/Lib/Infra/Repo/: ArticleList.hs  CapabilityList.hs  Collection.hs
src/Lib/Persistence/: File.hs  Sqlite.hs
src/Lib/Ui/: Server.hs
src/Lib/Ui/Cli/: Command.hs  Handler.hs
src/Lib/Ui/Dto/: Accesstoken.hs  Id.hs
src/Lib/Ui/Web/: Route.hs
src/Lib/Ui/Web/Controller/: ArticleList.hs  Collection.hs  Static.hs
src/Lib/Ui/Web/Dto/: Accesstoken.hs  ExpirationDate.hs  Form.hs  Id.hs
src/Lib/Ui/Web/Page/: Article.hs  ArticleList.hs  CollectionOverview.hs  CreateArticle.hs  EditArticle.hs  Layout.hs  ShareArticle.hs  ShareArticleList.hs  ShareCollectionOverview.hs  Shared.hs  Static.hs  Style.hs  UnlockCollection.hs
src/Lib/Ui/Web/Page/ViewModel/: Article.hs  Capability.hs  Permission.hs  UnlockLink.hs
src/Lib/Web/: Handler.hs  Route.hs  Types.hs
src/Lib/Web/Controller/: Collection.hs  Command.hs  Common.hs  Frontend.hs  Query.hs
src/Lib/Web/Handler/: Action.hs  Common.hs  Frontend.hs
src/Lib/Web/Route/: Action.hs  Collection.hs  Common.hs  Frontend.hs  SharedReference.hs  UnlockLink.hs
src/Lib/Web/View/: App.hs  Form.hs  Page.hs  Style.hs
src/Net/IPv6/: Helper.hs
src/Network/Wai/Middleware/: AddHsts.hs  MyMethodOverridePost.hs  NoOp.hs
src/Servant/CSS/: Clay.hs
static/: style.css
test/: Spec.hs  Test.hs
test/Test/: Assert.hs  Common.hs  Integration.hs  Mock.hs  Property.hs  Static.hs  TestAssert.hs  Unit.hs
test/Test/App/: Command.hs  Env.hs
test/Test/Core/Domain/: Accesstoken.hs
test/Test/Domain/: Article.hs  ArticleList.hs  Authorization.hs  Capability.hs  CapabilityList.hs  Id.hs  NonEmptyText.hs  Shared.hs  Uri.hs
test/Test/Infra/: Monad.hs
test/Test/Infra/Repo/: ArticleList.hs  CapabilityList.hs  Collection.hs
test/Test/Ui/Web/Controller/: ArticleList.hs  Collection.hs  Shared.hs  Static.hs
test/Test/Ui/Web/Dto/: Accesstoken.hs
test/Test/Web/: Accesstoken.hs
