cabal-version:      2.4
name:               eselsohr
version:            0.1.0.0
license:            EUPL-1.2
license-file:       LICENSE
maintainer:         mkoppmann <dev@mkoppmann.at>
author:             Michael Koppmann
tested-with:        ghc ==9.2
homepage:           https://github.com/mkoppmann/eselsohr
bug-reports:        https://github.com/mkoppmann/eselsohr/issues
category:           Web
data-files:         static/style.css
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Cli
        Config
        Init
        Lib
        Lib.App.Command
        Lib.App.Env
        Lib.App.Port
        Lib.Domain.Article
        Lib.Domain.ArticleList
        Lib.Domain.Authorization
        Lib.Domain.Capability
        Lib.Domain.CapabilityList
        Lib.Domain.Collection
        Lib.Domain.Error
        Lib.Domain.Id
        Lib.Domain.NonEmptyText
        Lib.Domain.Repo
        Lib.Domain.Repo.ArticleList
        Lib.Domain.Repo.CapabilityList
        Lib.Domain.Repo.Collection
        Lib.Domain.Uri
        Lib.Infra.Adapter.Random
        Lib.Infra.Adapter.Scraper
        Lib.Infra.Adapter.Time
        Lib.Infra.Error
        Lib.Infra.Log
        Lib.Infra.Monad
        Lib.Infra.Persistence.Cleanup
        Lib.Infra.Persistence.File
        Lib.Infra.Persistence.Model.Article
        Lib.Infra.Persistence.Model.ArticleList
        Lib.Infra.Persistence.Model.Capability
        Lib.Infra.Persistence.Model.CapabilityList
        Lib.Infra.Persistence.Model.Collection
        Lib.Infra.Persistence.Model.Id
        Lib.Infra.Persistence.Model.Shared
        Lib.Infra.Persistence.Model.Uri
        Lib.Infra.Persistence.Queue
        Lib.Infra.Persistence.Server
        Lib.Infra.Repo.ArticleList
        Lib.Infra.Repo.CapabilityList
        Lib.Infra.Repo.Collection
        Lib.Ui.Cli.Command
        Lib.Ui.Cli.Handler
        Lib.Ui.Dto.Accesstoken
        Lib.Ui.Dto.Id
        Lib.Ui.Server
        Lib.Ui.Web.Controller.ArticleList
        Lib.Ui.Web.Controller.Collection
        Lib.Ui.Web.Controller.Static
        Lib.Ui.Web.Dto.ExpirationDate
        Lib.Ui.Web.Dto.Form
        Lib.Ui.Web.Page.Article
        Lib.Ui.Web.Page.ArticleList
        Lib.Ui.Web.Page.CreateArticle
        Lib.Ui.Web.Page.CollectionOverview
        Lib.Ui.Web.Page.EditArticle
        Lib.Ui.Web.Page.Layout
        Lib.Ui.Web.Page.ShareArticle
        Lib.Ui.Web.Page.ShareArticleList
        Lib.Ui.Web.Page.ShareCollectionOverview
        Lib.Ui.Web.Page.Shared
        Lib.Ui.Web.Page.Static
        Lib.Ui.Web.Page.ViewModel.Article
        Lib.Ui.Web.Page.ViewModel.Capability
        Lib.Ui.Web.Page.ViewModel.Permission
        Lib.Ui.Web.Page.ViewModel.UnlockLink
        Lib.Ui.Web.Route
        Migration
        Net.IPv6.Helper
        Network.Wai.Middleware.AddHsts
        Network.Wai.Middleware.NoOp

    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions:
        DataKinds FlexibleContexts LambdaCase ScopedTypeVariables
        TypeApplications TypeOperators TypeFamilies OverloadedStrings
        MultiParamTypeClasses FlexibleInstances ConstraintKinds DerivingVia
        DerivingStrategies RecordWildCards InstanceSigs DeriveGeneric
        PatternSynonyms DeriveAnyClass DeriveTraversable TupleSections
        AllowAmbiguousTypes DuplicateRecordFields StandaloneDeriving

    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wredundant-constraints
        -fhide-source-paths -Wpartial-fields -Wmissing-deriving-strategies
        -fwrite-ide-info -hiedir=.hie -Wunused-packages -j -freverse-errors

    build-depends:
        aeson >=2.0.3 && <2.2,
        base >=4.16 && <4.19,
        base32 >=0.2.2 && <0.4,
        co-log >=0.5.0 && <0.6,
        dotenv >=0.9.0.2 && <0.12,
        exceptions >=0.10.4 && <0.11,
        filepath >=1.4.2 && <1.5,
        http-api-data >=0.4.3 && <0.6,
        http-client >=0.7.13 && <0.8,
        http-client-tls >=0.3.6 && <0.4,
        ip >=1.7.6 && <1.8,
        lucid >=2.11.1 && <2.12,
        microlens >=0.4.12 && <0.5,
        modern-uri >=0.3.6 && <0.4,
        mtl >=2.2.2 && <2.4,
        network >=3.1.2 && <3.2,
        relude >=1.1.0 && <1.3,
        scalpel >=0.6.2 && <0.7,
        serialise >=0.2.6 && <0.3,
        serialise-uuid >=0.1 && <0.2,
        servant >=0.19.1 && <0.20,
        servant-lucid >=0.9.0 && <0.10,
        servant-server >=0.19.2 && <0.20,
        time >=1.11.1 && <1.14,
        tls >=1.5.8 && <1.8,
        unliftio >=0.2.23 && <0.3,
        uuid >=1.3.15 && <1.4,
        validation-selective >=0.1.0 && <0.3,
        wai >=3.2.3 && <3.3,
        wai-enforce-https >=1.0.0 && <1.1,
        wai-extra >=3.1.13 && <3.2,
        warp >=3.3.23 && <3.4,
        warp-tls >=3.3.4 && <3.5,
        zlib >=0.6.3 && <0.7

    mixins:
        base hiding (Prelude),
        relude (Relude as Prelude, Relude.Extra.Bifunctor),
        relude

executable eselsohr-exe
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base >=4.16 && <4.19,
        eselsohr,
        optparse-applicative >=0.17 && <0.19

test-suite eselsohr-test
    type:               exitcode-stdio-1.0
    main-is:            Test.hs
    hs-source-dirs:     test
    other-modules:
        Test.App.Command
        Test.App.Env
        Test.Assert
        Test.Domain.Article
        Test.Domain.ArticleList
        Test.Domain.Authorization
        Test.Domain.Capability
        Test.Domain.CapabilityList
        Test.Domain.Id
        Test.Domain.NonEmptyText
        Test.Domain.Shared
        Test.Domain.Uri
        Test.Infra.Monad
        Test.Infra.Repo.ArticleList
        Test.Infra.Repo.CapabilityList
        Test.Infra.Repo.Collection
        Test.Integration
        Test.Mock
        Test.Property
        Test.TestAssert
        Test.Ui.Web.Controller.ArticleList
        Test.Ui.Web.Controller.Collection
        Test.Ui.Web.Controller.Shared
        Test.Ui.Web.Controller.Static
        Test.Ui.Web.Dto.Accesstoken
        Test.Unit

    default-language:   Haskell2010
    default-extensions:
        DataKinds FlexibleContexts LambdaCase ScopedTypeVariables
        TypeApplications TypeOperators TypeFamilies OverloadedStrings
        MultiParamTypeClasses FlexibleInstances ConstraintKinds DerivingVia
        DerivingStrategies RecordWildCards InstanceSigs DeriveGeneric
        PatternSynonyms DeriveAnyClass DeriveTraversable

    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wredundant-constraints
        -fhide-source-paths -Wpartial-fields -Wmissing-deriving-strategies
        -fwrite-ide-info -hiedir=.hie -Wunused-packages -j -freverse-errors
        -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base >=4.16 && <4.19,
        bytestring >=0.11.3 && <0.12,
        co-log >=0.5.0 && <0.6,
        eselsohr,
        filepath >=1.4.2 && <1.5,
        hedgehog >=1.1 && <1.3,
        hspec >=2.8.4 && <2.12,
        hspec-wai >=0.11.1 && <0.12,
        http-api-data >=0.4.3 && <0.6,
        http-types >=0.12.3 && <0.13,
        mtl >=2.2.2 && <2.4,
        relude >=1.1.0 && <1.3,
        servant >=0.19.1 && <0.20,
        tasty >=1.4.2.3 && <1.5,
        tasty-hedgehog >=1.1.0 && <1.5,
        tasty-hspec >=1.2.0 && <1.3,
        temporary >=1.3 && <1.4,
        time >=1.11.1 && <1.14,
        unliftio >=0.2.23 && <0.3,
        uuid >=1.3.15 && <1.4,
        wai >=3.2.3 && <3.3,
        wai-extra >=3.1.13 && <3.2,
        warp >=3.3.23 && <3.4

    mixins:
        base hiding (Prelude),
        relude (Relude as Prelude),
        relude
