cabal-version:      2.4
name:               eselsohr
version:            0.1.0.0
license:            EUPL-1.2
license-file:       LICENSE
maintainer:         mkoppmann <dev@mkoppmann.at>
author:             Michael Koppmann
tested-with:        ghc ==9.4
homepage:           https://github.com/mkoppmann/eselsohr
bug-reports:        https://github.com/mkoppmann/eselsohr/issues
category:           Web
data-files:         static/style.css
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Cli
        Config
        Init
        Lib
        Lib.App.Command
        Lib.App.Env
        Lib.App.Port
        Lib.Domain.Article
        Lib.Domain.ArticleList
        Lib.Domain.Authorization
        Lib.Domain.Capability
        Lib.Domain.CapabilityList
        Lib.Domain.Collection
        Lib.Domain.Error
        Lib.Domain.Id
        Lib.Domain.NonEmptyText
        Lib.Domain.Repo
        Lib.Domain.Repo.ArticleList
        Lib.Domain.Repo.CapabilityList
        Lib.Domain.Repo.Collection
        Lib.Domain.Uri
        Lib.Infra.Adapter.Random
        Lib.Infra.Adapter.Scraper
        Lib.Infra.Adapter.Time
        Lib.Infra.Error
        Lib.Infra.Log
        Lib.Infra.Monad
        Lib.Infra.Persistence.Cleanup
        Lib.Infra.Persistence.File
        Lib.Infra.Persistence.Model.Article
        Lib.Infra.Persistence.Model.ArticleList
        Lib.Infra.Persistence.Model.Capability
        Lib.Infra.Persistence.Model.CapabilityList
        Lib.Infra.Persistence.Model.Collection
        Lib.Infra.Persistence.Model.Id
        Lib.Infra.Persistence.Model.Shared
        Lib.Infra.Persistence.Model.Uri
        Lib.Infra.Persistence.Queue
        Lib.Infra.Persistence.Server
        Lib.Infra.Repo.ArticleList
        Lib.Infra.Repo.CapabilityList
        Lib.Infra.Repo.Collection
        Lib.Ui.Cli.Command
        Lib.Ui.Cli.Handler
        Lib.Ui.Dto.Accesstoken
        Lib.Ui.Dto.Id
        Lib.Ui.Server
        Lib.Ui.Web.Controller.ArticleList
        Lib.Ui.Web.Controller.Collection
        Lib.Ui.Web.Controller.Static
        Lib.Ui.Web.Dto.ExpirationDate
        Lib.Ui.Web.Dto.Form
        Lib.Ui.Web.Page.Article
        Lib.Ui.Web.Page.ArticleList
        Lib.Ui.Web.Page.CreateArticle
        Lib.Ui.Web.Page.CollectionOverview
        Lib.Ui.Web.Page.EditArticle
        Lib.Ui.Web.Page.Layout
        Lib.Ui.Web.Page.ShareArticle
        Lib.Ui.Web.Page.ShareArticleList
        Lib.Ui.Web.Page.ShareCollectionOverview
        Lib.Ui.Web.Page.Shared
        Lib.Ui.Web.Page.Static
        Lib.Ui.Web.Page.ViewModel.Article
        Lib.Ui.Web.Page.ViewModel.Capability
        Lib.Ui.Web.Page.ViewModel.Permission
        Lib.Ui.Web.Page.ViewModel.UnlockLink
        Lib.Ui.Web.Route
        Migration
        Net.IPv6.Helper
        Network.Wai.Middleware.AddHsts
        Network.Wai.Middleware.NoOp

    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions:
        DataKinds FlexibleContexts LambdaCase ScopedTypeVariables
        TypeApplications TypeOperators TypeFamilies OverloadedStrings
        MultiParamTypeClasses FlexibleInstances ConstraintKinds DerivingVia
        DerivingStrategies RecordWildCards InstanceSigs DeriveGeneric
        PatternSynonyms DeriveAnyClass DeriveTraversable TupleSections
        AllowAmbiguousTypes DuplicateRecordFields StandaloneDeriving

    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wredundant-constraints
        -fhide-source-paths -Wpartial-fields -Wmissing-deriving-strategies
        -fwrite-ide-info -hiedir=.hie -Wunused-packages -j -freverse-errors

    build-depends:
        aeson ^>=2.1.2,
        base ^>=4.17.2,
        base32 ^>=0.3.1,
        co-log ^>=0.6.0,
        dotenv ^>=0.11.0,
        exceptions ^>=0.10.5,
        filepath ^>=1.4.2,
        http-api-data ^>=0.5,
        http-client ^>=0.7.14,
        http-client-tls ^>=0.3.6,
        ip ^>=1.7.7,
        lucid ^>=2.11.20230408,
        microlens ^>=0.4.13,
        modern-uri ^>=0.3.6,
        mtl ^>=2.2.2,
        network ^>=3.1.4,
        relude ^>=1.2.1,
        scalpel ^>=0.6.2,
        serialise ^>=0.2.6,
        serialise-uuid ^>=0.1,
        servant ^>=0.19.1,
        servant-lucid ^>=0.9.0,
        servant-server ^>=0.19.2,
        time ^>=1.12.2,
        tls ^>=1.9.0,
        unliftio ^>=0.2.25,
        uuid ^>=1.3.15,
        validation-selective ^>=0.2.0,
        wai ^>=3.2.3,
        wai-enforce-https ^>=1.0.0,
        wai-extra ^>=3.1.13,
        warp ^>=3.3.29,
        warp-tls ^>=3.4.3,
        zlib ^>=0.6.3

    mixins:
        base hiding (Prelude),
        relude (Relude as Prelude, Relude.Extra.Bifunctor),
        relude

executable eselsohr-exe
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base ^>=4.17.2,
        eselsohr,
        optparse-applicative ^>=0.18.1

test-suite eselsohr-test
    type:               exitcode-stdio-1.0
    main-is:            Test.hs
    hs-source-dirs:     test
    other-modules:
        Test.App.Command
        Test.App.Env
        Test.Assert
        Test.Domain.Article
        Test.Domain.ArticleList
        Test.Domain.Authorization
        Test.Domain.Capability
        Test.Domain.CapabilityList
        Test.Domain.Id
        Test.Domain.NonEmptyText
        Test.Domain.Shared
        Test.Domain.Uri
        Test.Infra.Monad
        Test.Infra.Repo.ArticleList
        Test.Infra.Repo.CapabilityList
        Test.Infra.Repo.Collection
        Test.Integration
        Test.Mock
        Test.Property
        Test.TestAssert
        Test.Ui.Web.Controller.ArticleList
        Test.Ui.Web.Controller.Collection
        Test.Ui.Web.Controller.Shared
        Test.Ui.Web.Controller.Static
        Test.Ui.Web.Dto.Accesstoken
        Test.Unit

    default-language:   Haskell2010
    default-extensions:
        DataKinds FlexibleContexts LambdaCase ScopedTypeVariables
        TypeApplications TypeOperators TypeFamilies OverloadedStrings
        MultiParamTypeClasses FlexibleInstances ConstraintKinds DerivingVia
        DerivingStrategies RecordWildCards InstanceSigs DeriveGeneric
        PatternSynonyms DeriveAnyClass DeriveTraversable

    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wredundant-constraints
        -fhide-source-paths -Wpartial-fields -Wmissing-deriving-strategies
        -fwrite-ide-info -hiedir=.hie -Wunused-packages -j -freverse-errors
        -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base ^>=4.17.2,
        bytestring ^>=0.11.5,
        co-log ^>=0.6.0,
        eselsohr,
        filepath ^>=1.4.2,
        hedgehog ^>=1.4,
        hspec ^>=2.11.5,
        hspec-wai ^>=0.11.1,
        http-api-data ^>=0.5,
        http-types ^>=0.12.3,
        mtl ^>=2.2.2,
        relude ^>=1.2.1,
        servant ^>=0.19.1,
        tasty ^>=1.5,
        tasty-hedgehog ^>=1.4.0,
        tasty-hspec ^>=1.2.0,
        temporary ^>=1.3,
        time ^>=1.12.2,
        unliftio ^>=0.2.25,
        uuid ^>=1.3.15,
        wai ^>=3.2.3,
        wai-extra ^>=3.1.13,
        warp ^>=3.3.29

    mixins:
        base hiding (Prelude),
        relude (Relude as Prelude),
        relude
