cabal-version:      2.4
name:               eselsohr
version:            0.1.0.0
license:            AGPL-3.0-only
license-file:       LICENSE
maintainer:         mkoppmann <me@mkoppmann.at>
author:             mkoppmann
tested-with:        ghc ==8.10.2 || ==8.10.3
category:           Web
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Lib
        Lib.App
        Lib.App.Env
        Lib.App.Error
        Lib.App.Log
        Lib.App.Monad
        Lib.Config
        Lib.Core.Action
        Lib.Core.Action.Command
        Lib.Core.Action.Query
        Lib.Core.Domain
        Lib.Core.Domain.Accesstoken
        Lib.Core.Domain.Article
        Lib.Core.Domain.Capability
        Lib.Core.Domain.Context
        Lib.Core.Domain.Entity
        Lib.Core.Domain.ExpirationDate
        Lib.Core.Domain.Frontend
        Lib.Core.Domain.Id
        Lib.Core.Domain.Resource
        Lib.Core.Domain.Uri
        Lib.Core.Effect
        Lib.Core.Effect.Repository
        Lib.Core.Effect.Random
        Lib.Core.Effect.Scraper
        Lib.Core.Effect.Time
        Lib.Core.Flow
        Lib.Core.Flow.Command
        Lib.Core.Flow.Query
        Lib.Impl.Repository.File
        Lib.Impl.Repository
        Lib.Impl.Random
        Lib.Impl.Scraper
        Lib.Impl.Time
        Lib.Init
        Lib.Web
        Lib.Web.Controller
        Lib.Web.Controller.Command
        Lib.Web.Controller.Common
        Lib.Web.Controller.Frontend
        Lib.Web.Controller.Query
        Lib.Web.Route
        Lib.Web.Route.Command
        Lib.Web.Route.Common
        Lib.Web.Route.Frontend
        Lib.Web.Route.Query
        Lib.Web.Types
        Lib.Web.View.App
        Lib.Web.View.Form
        Lib.Web.View.Page
        Lib.Web.View.Style
        Net.IPv6.Helper
        Network.Wai.Middleware.AddHsts
        Network.Wai.Middleware.MyMethodOverride
        Network.Wai.Middleware.NoOp
        Servant.CSS.Clay

    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions:
        DataKinds FlexibleContexts LambdaCase ScopedTypeVariables
        TypeApplications TypeOperators TypeFamilies OverloadedStrings
        MultiParamTypeClasses FlexibleInstances ConstraintKinds DerivingVia
        DerivingStrategies RecordWildCards InstanceSigs DeriveGeneric
        PatternSynonyms DeriveAnyClass DeriveTraversable

    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wredundant-constraints
        -fhide-source-paths -Wpartial-fields -Wmissing-deriving-strategies
        -fwrite-ide-info -hiedir=.hie -Wunused-packages -j -freverse-errors

    build-depends:
        aeson >=1.5.5 && <1.6,
        base ^>=4.14.0.0,
        base64-bytestring >=1.1.0 && <1.3,
        binary >=0.8.8 && <0.11,
        binary-instances >=1.0.1 && <1.1,
        bytestring >=0.10.12 && <0.12,
        clay >=0.13.3 && <0.14,
        co-log >=0.4.0 && <0.5,
        containers >=0.6.2 && <0.7,
        dotenv >=0.8.0 && <0.9,
        exceptions >=0.10.4 && <0.11,
        filelock >=0.1.1 && <0.2,
        filepath >=1.4.2 && <1.5,
        http-api-data >=0.4.2 && <0.5,
        http-client >=0.7.4 && <0.8,
        http-client-tls >=0.3.5 && <0.4,
        http-client-restricted >=0.0.4 && <0.1,
        http-media >=0.8.0 && <0.9,
        http-types >=0.12.3 && <0.13,
        ip >=1.7.2 && <1.8,
        lucid >=2.9.12 && <2.10,
        microlens >=0.4.12 && <0.5,
        modern-uri >=0.3.3 && <0.4,
        mtl >=2.2.2 && <2.3,
        network >=3.1.0 && <3.2,
        relude >=0.7.0 && <0.8,
        scalpel >=0.6.2 && <0.7,
        servant >=0.18.2 && <0.19,
        servant-lucid >=0.9.0 && <0.10,
        servant-server >=0.18.2 && <0.19,
        text >=1.2.3.2 && <1.3,
        time >=1.9.3 && <1.12,
        tls >=1.5.4 && <1.6,
        unliftio >=0.2.13 && <0.3,
        uuid >=1.3.13 && <1.4,
        validation-selective >=0.1.0 && <0.2,
        wai >=3.2.2 && <3.3,
        wai-enforce-https >=0.0.2 && <0.1,
        wai-extra >=3.1.4.0 && <3.2,
        warp >=3.3.13 && <3.4,
        warp-tls >=3.3.0 && <3.4,

    mixins:
        base hiding (Prelude),
        relude (Relude as Prelude, Relude.Extra.Bifunctor)

executable eselsohr
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base ^>=4.14.0.0,
        eselsohr -any,
        optparse-applicative >=0.16.1 && <0.17
