cabal-version:      2.4
name:               eselsohr
version:            0.1.0.0
homepage:           https://github.com/mkoppmann/eselsohr
bug-reports:        https://github.com/mkoppmann/eselsohr/issues
license:            EUPL-1.2
license-file:       LICENSE
maintainer:         mkoppmann <dev@mkoppmann.at>
author:             Michael Koppmann
tested-with:        ghc ==8.10.7
category:           Web
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Lib
        Lib.App
        Lib.App.Env
        Lib.App.Error
        Lib.App.Log
        Lib.App.Monad
        Lib.Config
        Lib.Core.Domain
        Lib.Core.Domain.Accesstoken
        Lib.Core.Domain.Article
        Lib.Core.Domain.Capability
        Lib.Core.Domain.Context
        Lib.Core.Domain.Entity
        Lib.Core.Domain.ExpirationDate
        Lib.Core.Domain.Id
        Lib.Core.Domain.Resource
        Lib.Core.Domain.StoreEvent
        Lib.Core.Domain.Uri
        Lib.Core.Effect
        Lib.Core.Effect.Repository
        Lib.Core.Effect.Random
        Lib.Core.Effect.Scraper
        Lib.Core.Effect.Time
        Lib.Core.Service
        Lib.Core.Service.Article
        Lib.Core.Service.Collection
        Lib.Core.Service.SharedReference
        Lib.Core.Service.UnlockLink
        Lib.Core.Service.Util
        Lib.Impl.Repository.File
        Lib.Impl.Repository
        Lib.Impl.Random
        Lib.Impl.Scraper
        Lib.Impl.Time
        Lib.Init
        Lib.Persistence
        Lib.Web
        Lib.Web.Controller
        Lib.Web.Controller.Article
        Lib.Web.Controller.Collection
        Lib.Web.Controller.Frontend
        Lib.Web.Controller.SharedReference
        Lib.Web.Controller.UnlockLink
        Lib.Web.Controller.Util
        Lib.Web.Route
        Lib.Web.Route.Article
        Lib.Web.Route.Collection
        Lib.Web.Route.Frontend
        Lib.Web.Route.SharedReference
        Lib.Web.Route.UnlockLink
        Lib.Web.Route.Util
        Lib.Web.Types
        Lib.Web.View.App
        Lib.Web.View.Form
        Lib.Web.View.Page
        Lib.Web.View.Style
        Net.IPv6.Helper
        Network.Wai.Middleware.AddHsts
        Network.Wai.Middleware.NoOp
        Servant.CSS.Clay

    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions:
        DataKinds FlexibleContexts LambdaCase ScopedTypeVariables
        TypeApplications TypeOperators TypeFamilies OverloadedStrings
        MultiParamTypeClasses FlexibleInstances ConstraintKinds DerivingVia
        DerivingStrategies RecordWildCards InstanceSigs DeriveGeneric
        PatternSynonyms DeriveAnyClass DeriveTraversable TupleSections
        AllowAmbiguousTypes

    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wredundant-constraints
        -fhide-source-paths -Wpartial-fields -Wmissing-deriving-strategies
        -fwrite-ide-info -hiedir=.hie -Wunused-packages -j -freverse-errors

    build-depends:
        aeson >=1.5.5 && <1.6,
        base >=4.14.1 && <4.16,
        base32 >=0.2.0 && <0.3,
        clay >=0.13.3 && <0.14,
        co-log >=0.4.0 && <0.5,
        dotenv >=0.8.0 && <0.9,
        exceptions >=0.10.4 && <0.11,
        filepath >=1.4.2 && <1.5,
        http-api-data >=0.4.2 && <0.5,
        http-client >=0.6.4 && <0.8,
        http-client-tls >=0.3.5 && <0.4,
        http-client-restricted >=0.0.4 && <0.1,
        http-media >=0.8.0 && <0.9,
        ip >=1.7.2 && <1.8,
        lucid >=2.9.12 && <2.10,
        microlens >=0.4.12 && <0.5,
        modern-uri >=0.3.3 && <0.4,
        mtl >=2.2.2 && <2.3,
        network >=3.1.0 && <3.2,
        relude >=1.0.0 && <1.1,
        scalpel >=0.6.2 && <0.7,
        serialise >=0.2.3 && <0.3,
        serialise-uuid >=0.1 && <0.2,
        servant >=0.18.2 && <0.19,
        servant-lucid >=0.9.0 && <0.10,
        servant-server >=0.18.2 && <0.19,
        time >=1.9.3 && <1.13,
        tls >=1.5.4 && <1.6,
        unliftio >=0.2.13 && <0.3,
        uuid >=1.3.13 && <1.4,
        validation-selective >=0.1.0 && <0.2,
        wai >=3.2.2 && <3.3,
        wai-enforce-https >=0.0.2 && <0.1,
        wai-extra >=3.1.4.0 && <3.2,
        warp >=3.3.13 && <3.4,
        warp-tls >=3.3.0 && <3.4,

    mixins:
        base hiding (Prelude),
        relude (Relude as Prelude, Relude.Extra.Bifunctor),
        relude

executable eselsohr-exe
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base >=4.14.1 && <4.16,
        eselsohr,
        optparse-applicative >=0.16.0 && <0.17

test-suite eselsohr-test
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    hs-source-dirs:     test
    other-modules:
        Test.Assert
        Test.Common
        Test.Core.Domain.Accesstoken
        Test.Static

    default-language:   Haskell2010
    default-extensions:
        DataKinds FlexibleContexts LambdaCase ScopedTypeVariables
        TypeApplications TypeOperators TypeFamilies OverloadedStrings
        MultiParamTypeClasses FlexibleInstances ConstraintKinds DerivingVia
        DerivingStrategies RecordWildCards InstanceSigs DeriveGeneric
        PatternSynonyms DeriveAnyClass DeriveTraversable

    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wredundant-constraints
        -fhide-source-paths -Wpartial-fields -Wmissing-deriving-strategies
        -fwrite-ide-info -hiedir=.hie -Wunused-packages -j -freverse-errors
        -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base >=4.14.1 && <4.16,
        eselsohr,
        hedgehog >=1.0.4 && <1.1,
        hspec >=2.7.8 && <2.9,
        hspec-core >=2.7.8 && <2.9,
        http-api-data >=0.4.2 && <0.5,
        relude >=1.0.0 && <1.1,
        temporary >=1.3 && <1.4,
        unliftio >=0.2.13 && <0.3

    mixins:
        base hiding (Prelude),
        relude (Relude as Prelude)
